# dnabert

./: .env  .gitignore  command.txt  pyproject.toml  test.ipynb
finetune_model/: run_finetune.py
utils/: contigs_parser.py
